Added problems to 6.2 with powers of just sine and/or cosine

--- a/exercises/06_01_ex_99.tex
+++ b/exercises/06_01_ex_99.tex
@@ -1,4 +1,4 @@
-{In the text, we integrated $\ds \int \sin x \cos x\ dx$ using $u=\sin x$ to obtain the answer $\ds \frac{1}{2}\sin^2 x+C$.
+{In the text, we integrated $\ds \int \sin x \cos x\ dx$ using $u=\sin x$ to obtain the answer $\ds \frac{1}{2}\sin^2 x+C$.\label{exer:06_01_ex_99}
 \begin{enumerate}
 \item What answer to you obtain by choosing $u=\cos x$?
 \item Why are the two answers actually the same, even if they look different?
