--- a/exercises/06_03_exercises.tex
+++ b/exercises/06_03_exercises.tex
@@ -5,7 +5,7 @@
 \printproblems
 \exsetinput{exercises/06_03_exset_01}
 \exsetinput{exercises/06_03_exset_02}
-\columnbreak
+%\columnbreak
 \exsetinput{exercises/06_03_exset_03}
 %\printreview
 %\exsetinput{exercises/05_04_exset_07}
