--- a/exercises/06_03_exset_01.tex
+++ b/exercises/06_03_exset_01.tex
@@ -3,6 +3,9 @@
 \exinput{exercises/06_03_ex_04}
 \exinput{exercises/06_03_ex_05}
 \exinput{exercises/06_03_ex_05a}
+\exinput{exercises/06_03_ex_05b}
+\exinput{exercises/06_03_ex_05c}
+\exinput{exercises/06_03_ex_05d}
 \exinput{exercises/06_03_ex_06}
 \exinput{exercises/06_03_ex_07}
 \exinput{exercises/06_03_ex_08}
