--- a/text/06_Substitution.tex
+++ b/text/06_Substitution.tex
@@ -108,7 +108,7 @@ In this example, let's set $u = \sin x$. Then $du = \cos x\ dx$, which we have a
 											&= \frac12u^2+ C \\
 											&= \frac12\sin^2 x + C.
 		\end{align*}
-One would do well to ask ``What would happen if we let $u = \cos x$?'' The result is just as easy to find, yet looks very different. The challenge to the reader is to evaluate the integral letting $u = \cos x$ and discover why the answer is the same, yet looks different.
+One would do well to ask ``What would happen if we let $u = \cos x$?'' The result is just as easy to find, yet looks very different. The challenge to the reader is to evaluate the integral letting $u = \cos x$ and discover why the answer is the same, yet looks different.  This is explored in Exercise~\ref{exer:06_01_ex_99}.
 }\\
 
 Our examples so far have required ``basic substitution.'' The next example demonstrates how substitutions can be made that often strike the new learner as being ``nonstandard.''\\
