Chapter 6 minor edits and added problems

--- a/exercises/06_03_ex_34.tex
+++ b/exercises/06_03_ex_34.tex
@@ -1,2 +1,2 @@
 {$\ds \int \tan^5x\ dx$}
-{$\frac14\tan^4 x - \frac12\tan^2 x-ln|\cos x|+ C$}
+{$\frac14\tan^4 x - \frac12\tan^2 x- \ln|\cos x|+ C$}
