--- a/exercises/06_08_exercises.tex
+++ b/exercises/06_08_exercises.tex
@@ -6,4 +6,6 @@
 \printproblems
 \exsetinput{exercises/06_08_exset_01}
 \exsetinput{exercises/06_08_exset_02}
+\exinput{exercises/06_08_ex_36}
 \exsetinput{exercises/06_08_exset_03}
+\exsetinput{exercises/06_08_exset_04}
