--- a/exercises/06_08_exset_01.tex
+++ b/exercises/06_08_exset_01.tex
@@ -9,6 +9,8 @@
 \exinput{exercises/06_08_ex_11}
 \exinput{exercises/06_08_ex_12}
 \exinput{exercises/06_08_ex_13}
+\exinput{exercises/06_08_ex_34}
+\exinput{exercises/06_08_ex_35}
 \exinput{exercises/06_08_ex_14}
 \exinput{exercises/06_08_ex_15}
 \exinput{exercises/06_08_ex_16}
