--- a/text/06_Partial_Fractions.tex
+++ b/text/06_Partial_Fractions.tex
@@ -49,7 +49,7 @@ All together, we have
 \frac{1}{(x+5)(x-2)^3(x^2+x+2)(x^2+x+7)^2} &= \frac{A}{x+5} + \frac{B}{x-2}+ \frac{C}{(x-2)^2}+\frac{D}{(x-2)^3}+ \\
 		& \frac{Ex+F}{x^2+x+2}+\frac{Gx+H}{x^2+x+7}+\frac{Ix+J}{(x^2+x+7)^2}
 \end{align*}
-Solving for the coefficients $A$, $B \ldots J$ would be a bit tedious but not ``hard.''
+Solving for the coefficients $A$, $B \ldots J$ would be a bit tedious but not ``hard.''  By this, we mean it follows a systematic process, but would take too long to do by hand.  It would be easy, however, to program a computer to solve this integral.
 }\\
 
 \example{ex_pf2}{Decomposing into partial fractions}{
