--- a/text/07_Fluid_Force.tex
+++ b/text/07_Fluid_Force.tex
@@ -1,4 +1,4 @@
-\section{Fluid Forces}\label{sec:fluid_force}
+\section{Fluid Forces (Optional)}\label{sec:fluid_force}
 
 In the unfortunate situation of a car driving into a body of water, the conventional wisdom is that the water pressure on the doors will quickly be so great that they will be effectively unopenable. (Survival techniques suggest immediately opening the door, rolling down or breaking the window, or waiting until the water fills up the interior at which point the pressure is equalized and the door will open. See Mythbusters episode \#72 to watch Adam Savage test these options.)
 
