--- a/text/09_Conic_Sections.tex
+++ b/text/09_Conic_Sections.tex
@@ -6,7 +6,7 @@ In this chapter we'll explore new ways of drawing curves in the plane. We'll sti
 
 \enlargethispage{15\baselineskip}
 
-\section{Conic Sections}\label{sec:conic_sections}
+\section{Conic Sections (Optional)}\label{sec:conic_sections}
 
 The ancient Greeks recognized that interesting shapes can be formed by intersecting a plane with a 
 \textit{double napped} cone (i.e., two identical cones placed tip--to--tip as shown in the following figures). As these shapes are formed as sections of conics, they have earned the official name ``conic sections.''
