--- a/exercises/06_03_exercises.tex
+++ b/exercises/06_03_exercises.tex
@@ -4,6 +4,7 @@
 \exinput{exercises/06_03_ex_03}
 \printproblems
 \exsetinput{exercises/06_03_exset_01}
+\columnbreak
 \exsetinput{exercises/06_03_exset_02}
 %\columnbreak
 \exsetinput{exercises/06_03_exset_03}
