--- a/exercises/06_03_exset_01.tex
+++ b/exercises/06_03_exset_01.tex
@@ -11,6 +11,7 @@
 \exinput{exercises/06_03_ex_08}
 \exinput{exercises/06_03_ex_09}
 \exinput{exercises/06_03_ex_10}
+\exinput{exercises/06_03_ex_40}
 \exinput{exercises/06_03_ex_11}
 \exinput{exercises/06_03_ex_12}
 \exinput{exercises/06_03_ex_13}
