--- a/text/06_Hyperbolic_Functions.tex
+++ b/text/06_Hyperbolic_Functions.tex
@@ -1,4 +1,4 @@
-\section{Hyperbolic Functions}\label{sec:hyperbolic}
+\section{Hyperbolic Functions (Optional)}\label{sec:hyperbolic}
 
 The \textbf{hyperbolic functions} are a set of functions that have many applications to mathematics, physics, and engineering. Among many other applications, they are used to describe the formation of satellite rings around planets, to describe the shape of a rope hanging from two points, and have application to the theory of special relativity. This section defines the hyperbolic functions and describes many of their properties, especially their usefulness to calculus.
 
@@ -12,16 +12,16 @@ We begin with their definition.
 {\noindent%
 \begin{minipage}{.5\specialboxlength}
 \begin{enumerate}
-\item		$\ds \cosh x = \frac{e^x+e^{-x}}2$\index{hyperbolic function!definition}
-\item		$\ds \sinh x = \frac{e^x-e^{-x}}2$
+\item		$\ds \sinh x = \frac{e^x-e^{-x}}2$\index{hyperbolic function!definition}
+\item		$\ds \cosh x = \frac{e^x+e^{-x}}2$
 \item		$\ds \tanh x = \frac{\sinh x}{\cosh x}$
 \end{enumerate}
 \end{minipage}
 \begin{minipage}{.5\specialboxlength}
 \begin{enumerate}\addtocounter{enumi}{3}
+\item		$\ds \coth x = \frac{\cosh x}{\sinh x}$
 \item		$\ds \sech x = \frac{1}{\cosh x}$
 \item		$\ds \csch x = \frac{1}{\sinh x}$
-\item		$\ds \coth x = \frac{\cosh x}{\sinh x}$
 \end{enumerate}
 \end{minipage}
 }\\
@@ -149,19 +149,19 @@ The following Key Idea summarizes many of the important identities relating to h
 \begin{minipage}[t]{.33\specialboxlength}
 \textbf{Derivatives}
 \begin{enumerate}
-\item $\frac{d}{dx}\big(\cosh x\big) = \sinh x$
 \item $\frac{d}{dx}\big(\sinh x\big) = \cosh x$
+\item $\frac{d}{dx}\big(\cosh x\big) = \sinh x$
 \item $\frac{d}{dx}\big(\tanh x\big) = \sech^2 x$
+\item $\frac{d}{dx}\big(\coth x\big) = -\csch^2x$
 \item $\frac{d}{dx}\big(\sech x\big) = -\sech x\tanh x$
 \item $\frac{d}{dx}\big(\csch x\big) = -\csch x\coth x$
-\item $\frac{d}{dx}\big(\coth x\big) = -\csch^2x$
 \end{enumerate}
 \end{minipage}
 \begin{minipage}[t]{.33\specialboxlength}
 \textbf{Integrals}
 \begin{enumerate}
-\item $\ds\int \cosh x\ dx = \sinh x+C$
 \item $\ds\int \sinh x\ dx = \cosh x+C$
+\item $\ds\int \cosh x\ dx = \sinh x+C$
 \item $\ds\int \tanh x\ dx = \ln(\cosh x) +C$
 \item $\ds\int \coth x\ dx = \ln|\sinh x\,|+C$
 \end{enumerate}
@@ -227,12 +227,12 @@ Because the hyperbolic functions are defined in terms of exponential functions, 
 \small
 \begin{tabular}{ccc}
 Function & Domain & Range\\ \hline
-$\cosh x$ & $[0,\infty)$ & $[1,\infty)$\\
 $\sinh x$ & $(-\infty,\infty)$ & $(-\infty,\infty)$\\
+$\cosh x$ & $[0,\infty)$ & $[1,\infty)$\\
 $\tanh x$ & $(-\infty,\infty)$ & $(-1,1)$\\
+$\coth x$ & $(-\infty,0) \cup (0,\infty)$ & $(-\infty,-1) \cup (1,\infty)$\\
 $\sech x$ & $[0,\infty)$ & $(0,1]$ \\
-$\csch x$ & $(-\infty,0) \cup (0,\infty)$ & $(-\infty,0) \cup (0,\infty)$\\
-$\coth x$ & $(-\infty,0) \cup (0,\infty)$ & $(-\infty,-1) \cup (1,\infty)$
+$\csch x$ & $(-\infty,0) \cup (0,\infty)$ & $(-\infty,0) \cup (0,\infty)$
 \end{tabular}
 \hskip 40pt
 %\end{minipage}\hskip 40pt
@@ -240,12 +240,12 @@ $\coth x$ & $(-\infty,0) \cup (0,\infty)$ & $(-\infty,-1) \cup (1,\infty)$
 %\centering\small
 \begin{tabular}{ccc}
 Function & Domain & Range\\ \hline
-\rule{0pt}{10pt}$\cosh^{-1} x$ & $[1,\infty)$ & $[0,\infty)$ \\
-$\sinh^{-1} x$ & $(-\infty,\infty)$ & $(-\infty,\infty)$\\
+\rule{0pt}{10pt}$\sinh^{-1} x$ & $(-\infty,\infty)$ & $(-\infty,\infty)$\\
+$\cosh^{-1} x$ & $[1,\infty)$ & $[0,\infty)$ \\
 $\tanh^{-1} x$ & $(-1,1)$ & $(-\infty,\infty)$\\
+$\coth^{-1} x$ & $(-\infty,-1) \cup (1,\infty)$ & $(-\infty,0) \cup (0,\infty)$\\
 $\sech^{-1} x$ & $(0,1]$ & $[0,\infty)$ \\
-$\csch^{-1} x$ & $(-\infty,0) \cup (0,\infty)$ & $(-\infty,0) \cup (0,\infty)$\\
-$\coth^{-1} x$ & $(-\infty,-1) \cup (1,\infty)$ & $(-\infty,0) \cup (0,\infty)$
+$\csch^{-1} x$ & $(-\infty,0) \cup (0,\infty)$ & $(-\infty,0) \cup (0,\infty)$
 \end{tabular}
 %\captionsetup{type=figure}%
 %\caption{Restricted domains and ranges of the hyperbolic functions.}\label{fig:hfinverse1}
@@ -272,15 +272,15 @@ $\coth^{-1} x$ & $(-\infty,-1) \cup (1,\infty)$ & $(-\infty,0) \cup (0,\infty)$
 {\noindent%
 \begin{minipage}[t]{.5\specialboxlength}
 \begin{enumerate}
-\item $\ds\cosh^{-1}x=\ln\big(x+\sqrt{x^2-1}\big);\ x\geq1$\index{hyperbolic function!inverse!logarithmic def.}\rule[-10pt]{0pt}{20pt}
+\item $\ds\sinh^{-1}x = \ln\big(x+\sqrt{x^2+1}\big)$\index{hyperbolic function!inverse!logarithmic def.}\rule[-10pt]{0pt}{20pt}
+\item $\ds\cosh^{-1}x=\ln\big(x+\sqrt{x^2-1}\big);\ x\geq1$\rule[-10pt]{0pt}{20pt}
 \item $\ds\tanh^{-1}x = \frac12\ln\left(\frac{1+x}{1-x}\right);\ |x|<1$\rule[-10pt]{0pt}{20pt}
-\item $\ds \sech^{-1}x = \ln\left(\frac{1+\sqrt{1-x^2}}x\right);\ 0<x\leq1$\rule[-10pt]{0pt}{20pt}
 \end{enumerate}
 \end{minipage}
 \begin{minipage}[t]{.5\specialboxlength}
 \begin{enumerate}\addtocounter{enumi}{3}
-\item $\ds\sinh^{-1}x = \ln\big(x+\sqrt{x^2+1}\big)$\rule[-10pt]{0pt}{20pt}
 \item	 $\ds\coth^{-1}x = \frac12\ln\left(\frac{x+1}{x-1}\right);\ |x|>1$\rule[-10pt]{0pt}{20pt}
+\item $\ds \sech^{-1}x = \ln\left(\frac{1+\sqrt{1-x^2}}x\right);\ 0<x\leq1$\rule[-10pt]{0pt}{20pt}
 \item $\ds\csch^{-1}x = \ln\left(\frac1x+\frac{\sqrt{1+x^2}}{|x|}\right);\ x\neq0$\rule[-10pt]{0pt}{20pt}
 \end{enumerate}
 \end{minipage}
@@ -310,16 +310,16 @@ The following Key Ideas give the derivatives and integrals relating to the inver
 {%
 \begin{minipage}[t]{.45\specialboxlength}
 \begin{enumerate}
-\item $\ds\frac{d}{dx}\big(\cosh^{-1} x\big) = \frac{1}{\sqrt{x^2-1}};\ x>1$\index{derivative!inverse hyper.}\index{hyperbolic function!inverse!derivative}
-\item $\ds\frac{d}{dx}\big(\sinh^{-1} x\big) = \frac{1}{\sqrt{x^2+1}}$
+\item $\ds\frac{d}{dx}\big(\sinh^{-1} x\big) = \frac{1}{\sqrt{x^2+1}}$\index{derivative!inverse hyper.}\index{hyperbolic function!inverse!derivative}
+\item $\ds\frac{d}{dx}\big(\cosh^{-1} x\big) = \frac{1}{\sqrt{x^2-1}};\ x>1$
 \item $\ds\frac{d}{dx}\big(\tanh^{-1} x\big) = \frac{1}{1-x^2};\ |x|<1$
 \end{enumerate}
 \end{minipage}
 \begin{minipage}[t]{.55\specialboxlength}
 \begin{enumerate}\addtocounter{enumi}{3}
+\item $\ds\frac{d}{dx}\big(\coth^{-1} x\big) = \frac{1}{1-x^2};\ |x|>1$
 \item $\ds\frac{d}{dx}\big(\sech^{-1} x\big) = \frac{-1}{x\sqrt{1-x^2}}; 0<x<1$
 \item $\ds\frac{d}{dx}\big(\csch^{-1} x\big) = \frac{-1}{|x|\sqrt{1+x^2}};\ x\neq0$
-\item $\ds\frac{d}{dx}\big(\coth^{-1} x\big) = \frac{1}{1-x^2};\ |x|>1$
 \end{enumerate}
 \end{minipage}
 }
@@ -333,9 +333,9 @@ The following Key Ideas give the derivatives and integrals relating to the inver
 \keyidea{idea:hyperbolic_inverse_integrals}{Integrals Involving Inverse Hyperbolic Functions}
 {%
 \begin{enumerate}
-\item \parbox{70pt}{$\ds\int \frac{1}{\sqrt{x^2-a^2}}\ dx$} \parbox{180pt}{$\ds=\qquad \cosh^{-1}\left(\frac xa\right)+C;\ 0<a<x$} $\ds=\ln\Big|x+\sqrt{x^2-a^2}\Big|+C$\index{integration!inverse hyper.}\index{hyperbolic function!inverse!integration}
+\item \parbox{70pt}{$\ds\int \frac{1}{\sqrt{x^2+a^2}}\ dx$} \parbox{180pt}{$\ds=\qquad \sinh^{-1}\left(\frac xa\right)+C;\ a>0$} $\ds=\ln\Big|x+\sqrt{x^2+a^2}\Big|+C$\index{integration!inverse hyper.}\index{hyperbolic function!inverse!integration}
 
-\item \parbox{70pt}{$\ds\int \frac{1}{\sqrt{x^2+a^2}}\ dx$} \parbox{180pt}{$\ds=\qquad \sinh^{-1}\left(\frac xa\right)+C;\ a>0$} $\ds=\ln\Big|x+\sqrt{x^2+a^2}\Big|+C$
+\item \parbox{70pt}{$\ds\int \frac{1}{\sqrt{x^2-a^2}}\ dx$} \parbox{180pt}{$\ds=\qquad \cosh^{-1}\left(\frac xa\right)+C;\ 0<a<x$} $\ds=\ln\Big|x+\sqrt{x^2-a^2}\Big|+C$
 
 \item \parbox{70pt}{$\ds\int \frac{1}{a^2-x^2}\ dx$} \parbox{180pt}{$\ds=\qquad \left\{\begin{array}{ccc} \frac1a\tanh^{-1}\left(\frac xa\right)+C & & x^2<a^2 \\ \\
 \frac1a\coth^{-1}\left(\frac xa\right)+C & & a^2<x^2 \end{array}\right.$} $\ds=\frac1{2a}\ln\left|\frac{a+x}{a-x}\right|+C$
@@ -398,7 +398,7 @@ We should note that this exact problem was solved at the beginning of Section \r
 %\end{align*}
 %matching the answer previously obtained.
 
-\item		This requires a substitution, then item \#2 of Key Idea \ref{idea:hyperbolic_inverse_integrals} can be applied.
+\item		This requires a substitution, then item \#1 of Key Idea \ref{idea:hyperbolic_inverse_integrals} can be applied.
 
 Let $u = 3x$, hence $du = 3dx$. We have 
 \begin{align*}
@@ -415,7 +415,7 @@ This section covers a lot of ground. New functions were introduced, along with s
 
 Do not view this section as containing a source of information to be memorized, but rather as a reference for future problem solving. Key Idea \ref{idea:hyperbolic_inverse_integrals} contains perhaps the most useful information. Know the integration forms it helps evaluate and understand how to use the inverse hyperbolic answer and the logarithmic answer.
 
-The next section takes a brief break from demonstrating new integration techniques. It instead demonstrates a technique of evaluating limits that return indeterminate forms. This technique will be useful in Section \ref{sec:improper_integration}, where limits will arise in the evaluation of certain definite integrals.
+%The next section takes a brief break from demonstrating new integration techniques. It instead demonstrates a technique of evaluating limits that return indeterminate forms. This technique will be useful in Section \ref{sec:improper_integration}, where limits will arise in the evaluation of certain definite integrals.
 
 
 \printexercises{exercises/06_05_exercises}
