--- a/text/07_Disk_Washer_Method.tex
+++ b/text/07_Disk_Washer_Method.tex
@@ -284,7 +284,7 @@ Rotating about the $x$-axis will produce cross sections in the shape of washers,
 \begin{align*}
 V &= \pi\int_1^3 \Big((2x-1)^2-(x^2-2x+2)^2\Big)\ dx \\
 		&= \pi\int_1^3 \big(-x^4+4x^3-4x^2+4x-3\big)\ dx \\
-		&= \pi\Big[-\frac{1}{5}x^5+x^4-\frac43x^3+2x^2-3x\Big]\Big|_1^3 \\
+		&= \pi\left[-\frac{1}{5}x^5+x^4-\frac43x^3+2x^2-3x\right]\Big|_1^3 \\
 		&=\frac{104}{15}\pi \approx 21.78\ \text{units}^3.
 \end{align*}	
 \vskip-1.5\baselineskip	
@@ -364,9 +364,9 @@ The inside radius is formed by the line connecting $(1,1)$ and $(2,3)$. The equa
 
 We integrate over the $y$-bounds of $y=1$ to $y=3$. Thus the volume is
 \begin{align*}
-V 	&=	\pi\int_1^3\Big(2^2 - \big(\frac12(y+1)\big)^2\Big)\ dy \\
-		&=	\pi\int_1^3\Big(-\frac14y^2-\frac12y+\frac{15}4\Big)\ dy \\
-		&= 	\pi\Big[-\frac1{12}y^3-\frac14y^2+\frac{15}4y\Big]\Big|_1^3\\
+V 	&=	\pi\int_1^3\left(2^2 - \left(\frac12(y+1)\right)^2\right)\ dy \\
+		&=	\pi\int_1^3\left(-\frac14y^2-\frac12y+\frac{15}4\right)\ dy \\
+		&= 	\pi\left[-\frac1{12}y^3-\frac14y^2+\frac{15}4y\right]\Big|_1^3\\
 		&= \frac{10}3\pi \approx 10.47\ \text{units}^3.
 \end{align*}
 %\mfigurethree{width=125pt,3Dmenu,activate=onclick,deactivate=onclick,
@@ -382,11 +382,11 @@ V 	&=	\pi\int_1^3\Big(2^2 - \big(\frac12(y+1)\big)^2\Big)\ dy \\
 
 This section introduced a new application of the definite integral. Our default view of the definite integral is that it gives ``the area under the curve.'' However, we can establish definite integrals that represent other quantities; in this section, we computed volume.
 
-The ultimate goal of this section is not to compute volumes of solids. That can be useful, but what is more useful is the understanding of this basic principle of integral calculus, outlined in Key Idea \ref{idea:app_of_defint}: to find the exact value of some quantity, 
+The ultimate goal of this section is not to compute volumes of solids. That can be useful, but what is more useful is the understanding of this basic principle of integral calculus, outlined in Key Idea \ref{idea:app_of_defint}: to find the exact value of some quantity, \vspace{-0.03 in}
 \begin{itemize}
-	\item we start with an approximation (in this section, slice the solid and approximate the volume of each slice), 
-	\item then make the approximation better by refining our original approximation (i.e., use more slices), 
-	\item	then use limits to establish a definite integral which gives the exact value.
+	\item we start with an approximation (in this section, slice the solid and approximate the volume of each slice),\vspace{-0.057 in}
+	\item then make the approximation better by refining our original approximation (i.e., use more slices), \vspace{-0.057 in}
+	\item	then use limits to establish a definite integral which gives the exact value.%\vspace{-0.057 in}
 \end{itemize}
 
 We practice this principle in the next section where we find volumes by slicing solids in a different way.
