--- a/exercises/07_02_ex_20.tex
+++ b/exercises/07_02_ex_20.tex
@@ -1,4 +1,4 @@
-{A right triangular cone with height of 10 and whose base is a right, isosceles triangle with side length 4.
+{A right triangular pyramid with height of 10 and whose base is a right, isosceles triangle with side length 4.
 
 \begin{tikzpicture}[scale=.75]
 \draw [thick](-1,0) -- (1,0) -- (0,3)--cycle;
@@ -7,5 +7,5 @@
 \draw (-.2,.4) -- (0,.3) -- (.2,.4);
 \end{tikzpicture}
 }
-{Orient the cone such that the tip is at the origin and the $x$-axis is perpendicular to the base. The cross--sections of this cone are right, isosceles triangles with side length $2x/5$; thus the cross--sectional areas are $A(x) = 2x^2/25$, giving a volume of $80/3$ units$^3$.
+{Orient the pyramid such that the tip is at the origin and the $x$-axis is perpendicular to the base. The cross--sections of this pyramid are right, isosceles triangles with side length $2x/5$; thus the cross--sectional areas are $A(x) = 2x^2/25$, giving a volume of $80/3$ units$^3$.
 }
