More chapter 7 small edits

--- a/exercises/07_05_ex_06.tex
+++ b/exercises/07_05_ex_06.tex
@@ -5,7 +5,7 @@
 	\item		How much rope is pulled in when half of the total work is done?
 	\end{enumerate}}
 {\begin{enumerate}
-	\item 	$\frac12\cdot d\cdot l^2$ ft--lb
+	\item 	$\frac12\cdot d\cdot \ell^2$ ft--lb
 	\item		75 \%
 	\item		$\ell(1-\sqrt{2}/2) \approx 0.2929\ell$
 	\end{enumerate}
