--- a/exercises/07_05_exercises.tex
+++ b/exercises/07_05_exercises.tex
@@ -14,6 +14,7 @@
 \exinput{exercises/07_05_ex_12}
 \exinput{exercises/07_05_ex_13}
 \exinput{exercises/07_05_ex_14}
+\exinput{exercises/07_05_ex_14a}
 \exinput{exercises/07_05_ex_15}
 \exinput{exercises/07_05_ex_16}
 \exinput{exercises/07_05_ex_17}
