--- a/text/07_Arc_Length.tex
+++ b/text/07_Arc_Length.tex
@@ -64,7 +64,7 @@ Find the arc length of $f(x) = x^{3/2}$ from $x=0$ to $x=4$. }
 	L &=	\int_0^4 \sqrt{1+\left(\frac32x^{1/2}\right)^2}\ dx \\
 		&=	\int_0^4 \sqrt{1+\frac94x} \ dx \\
 		&= 	\int_0^4 \left(1+\frac94x\right)^{1/2}\ dx \\
-		&=  \frac23\frac49\left(1+\frac94x\right)^{3/2}\Big|_0^4 \\
+		&=  \frac23\cdot \frac49\left(1+\frac94x\right)^{3/2}\Big|_0^4 \\
 		&=\frac{8}{27}\left(10^{3/2}-1\right) \approx 9.07 \text{units}.
 \end{align*}
 \mfigure{.8}{A graph of $f(x) = x^{3/2}$ from Example \ref{ex_arc1}.}{fig:arc1}{figures/figarc1}	
@@ -232,7 +232,7 @@ Find the surface area of the solid formed by revolving the curve $y=x^2$ on $[0,
 	SA &= 2\pi\int_0^1x\sqrt{1+(2x)^2}\ dx.
 		\intertext{This integral can be solved using substitution. Set $u=1+4x^2$; the new bounds are $u=1$ to $u=5$. We then have }
 		&=	\frac{\pi}4\int_1^5 \sqrt{u}\ du \\
-		&= \left.\frac{\pi}{4}\frac23 u^{3/2}\right|_1^5\\
+		&= \left.\frac{\pi}{4}\cdot\frac23 u^{3/2}\right|_1^5\\
 		&= \frac{\pi}6\left(5\sqrt{5}-1\right)\\
 		&\approx 5.33\ \text{units}^2.
 	\end{align*}
