--- a/text/07_Fluid_Force.tex
+++ b/text/07_Fluid_Force.tex
@@ -72,7 +72,7 @@ Consider a thin plate in the shape of an isosceles triangle as shown in Figure \
 	\begin{enumerate}
 	\item		We let $y=0$ represent the surface of the water; therefore the bottom of the plate is at $y=-10$. We center the triangle on the $y$-axis as shown in Figure \ref{fig:fluid2b}. The depth of the plate at $y$ is $-y$ as indicated by the Key Idea. We now consider the length of the plate at $y$.
 		
-	We need to find equations of the left and right edges of the plate. The right hand side is a line that connects the points $(0,-10)$ and $(2,-6)$: that line has equation $x=1/2(y+10)$. (Find the equation in the familiar $y=mx+b$ format and solve for $x$.) Likewise, the left hand side is described by the line $x=-1/2(y+10)$. The total length is the distance between these two lines: $\ell(y)=1/2(y+10) - (-1/2(y+10)) = y+10.$
+	We need to find equations of the left and right edges of the plate. The right hand side is a line that connects the points $(0,-10)$ and $(2,-6)$: that line has equation $x=\frac{1}{2}(y+10)$. (Find the equation in the familiar $y=mx+b$ format and solve for $x$.) Likewise, the left hand side is described by the line $x=-\frac{1}{2}(y+10)$. The total length is the distance between these two lines: $\ell(y)=\frac{1}{2}(y+10) - \left(-\frac{1}{2}(y+10)\right) = y+10.$
 	\mfigure{.75}{Sketching the triangular plate in Example \ref{ex_fluid2} with the convention that the water level is at $y=0$.}{fig:fluid2b}{figures/figfluid2b}
 	
 The total fluid force is then:
@@ -81,7 +81,7 @@ F 	&=	\int_{-10}^{-6} 62.4(-y)(y+10)\ dy \\
 		&=	62.4\cdot \frac{176}{3} \approx	3660.8\text{ lb}.
 \end{align*}
 
-\item		Sometimes it seems easier to orient the thin plate nearer the origin. For instance, consider the convention that the bottom of the triangular plate is at $(0,0)$, as shown in Figure \ref{fig:fluid2c}. The equations of the left and right hand sides are easy to find. They are $y=2x$ and $y=-2x$, respectively, which we rewrite as $x= 1/2y$ and $x=-1/2y$. Thus the length function is $\ell(y) = 1/2y-(-1/2y) = y$. 
+\item		Sometimes it seems easier to orient the thin plate nearer the origin. For instance, consider the convention that the bottom of the triangular plate is at $(0,0)$, as shown in Figure \ref{fig:fluid2c}. The equations of the left and right hand sides are easy to find. They are $y=2x$ and $y=-2x$, respectively, which we rewrite as $x= \frac{1}{2}y$ and $x=-\frac{1}{2}y$. Thus the length function is $\ell(y) = \frac{1}{2}y-\left(-\frac{1}{2}y\right) = y$. 
 \mfigure{.4}{Sketching the triangular plate in Example \ref{ex_fluid2} with the convention that the base of the triangle is at $(0,0)$.}{fig:fluid2c}{figures/figfluid2c}
 
 As the surface of the water is 10 ft above the base of the plate, we have that the surface of the water is at $y=10$. Thus the depth function is the distance between $y=10$ and $y$; $d(y) = 10-y$. We compute the total fluid force as:
